# backend-challenge

./: .flake8  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
backend/: settings.py
